--- a/recipes/pitaSandwhich.html
+++ b/recipes/pitaSandwhich.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Pita Sandwhich</h1>
 
-    <img src="https://www.allrecipes.com/article/5-ingredient-breakfast-sandwiches/" alt="A delicious breakfast pita">
+    <img src="https://www.allrecipes.com/thmb/Xz5l4O0lPIadCvMZhPAjFL3wEB4=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Pita-Sandwich-7f041914ec4a4602b4b0736a15ae6c5d.jpg" alt="A delicious breakfast pita">
 
     <h2>Description</h2>
     <p>This is a recipe for an incredibly tasty and nutritious pita breakfast sandwhich</p>
@@ -34,6 +34,8 @@
         <li>Stuff pita with your delicious briny cheesy eggs</li>
         <li>Enjoy!</li>
     </ol>
+
+    <a href="../index.html">Home</a>
 
 </body>
 </html>
